--- a/age-corona/20s_cause_of_infection.ipynb
+++ b/age-corona/20s_cause_of_infection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -11,58 +11,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4004 entries, 0 to 4003\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column              Non-Null Count  Dtype  \n",
-      "---  ------              --------------  -----  \n",
-      " 0   patient_id          4004 non-null   int64  \n",
-      " 1   global_num          2806 non-null   float64\n",
-      " 2   sex                 3674 non-null   object \n",
-      " 3   birth_year          3267 non-null   object \n",
-      " 4   age                 3525 non-null   object \n",
-      " 5   country             4004 non-null   object \n",
-      " 6   province            4004 non-null   object \n",
-      " 7   city                3926 non-null   object \n",
-      " 8   disease             18 non-null     object \n",
-      " 9   infection_case      3211 non-null   object \n",
-      " 10  infection_order     31 non-null     float64\n",
-      " 11  infected_by         899 non-null    object \n",
-      " 12  contact_number      680 non-null    object \n",
-      " 13  symptom_onset_date  535 non-null    object \n",
-      " 14  confirmed_date      4001 non-null   object \n",
-      " 15  released_date       1508 non-null   object \n",
-      " 16  deceased_date       65 non-null     object \n",
-      " 17  state               4004 non-null   object \n",
-      "dtypes: float64(2), int64(1), object(15)\n",
-      "memory usage: 563.2+ KB\n"
+      "etc                            541\n",
+      "hospital                       472\n",
+      "store                          178\n",
+      "restaurant                     167\n",
+      "public_transportation          156\n",
+      "airport                         98\n",
+      "church                          55\n",
+      "cafe                            52\n",
+      "pharmacy                        47\n",
+      "pc_cafe                         43\n",
+      "lodging                         12\n",
+      "academy                         10\n",
+      "university                      10\n",
+      "bar                              8\n",
+      "post_office                      8\n",
+      "gym                              7\n",
+      "bakery                           7\n",
+      "school                           7\n",
+      "bank                             5\n",
+      "karaoke                          5\n",
+      "administrative_area_level_1      3\n",
+      "gas_station                      3\n",
+      "park                             2\n",
+      "beauty_salon                     2\n",
+      "Name: type, dtype: int64\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "infection_case\n",
-       "overseas inflow                    257\n",
-       "contact with patient               169\n",
-       "etc                                119\n",
-       "Shincheonji Church                  41\n",
-       "Onchun Church                       18\n",
-       "Guro-gu Call Center                 13\n",
-       "Itaewon Clubs                       11\n",
-       "Dongan Church                        8\n",
-       "Coupang Logistics Center             4\n",
-       "Milal Shelter                        3\n",
-       "Seongdong-gu APT                     2\n",
-       "Eunpyeong St. Mary's Hospital        2\n",
-       "Changnyeong Coin Karaoke             2\n",
-       "gym facility in Cheonan              1\n",
-       "River of Grace Community Church      1\n",
-       "gym facility in Sejong               1\n",
-       "Cheongdo Daenam Hospital             1\n",
-       "Name: patient_id, dtype: int64"
+       "False    1098\n",
+       "True      800\n",
+       "Name: is_many, dtype: int64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,12 +60,26 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "     \n",
     "time_age = pd.read_csv(r'./data/PatientInfo.csv')\n",
-    "time_age.info()\n",
-    "time_age = time_age[time_age.age.notnull()]\n",
-    "time_20s = time_age[time_age.age=='20s']\n",
-    "# time_20s = time_20s.infection_order.value_counts()\n",
-    "# print(time_20s.shape)\n",
-    "time_20s.groupby('infection_case')['patient_id'].count().sort_values(ascending= False)"
+    "patient_route = pd.read_csv(r'./data/PatientRoute.csv')\n",
+    "\n",
+    "joined_df = time_age.merge(patient_route, left_on = 'patient_id', right_on = 'patient_id', how = 'inner')\n",
+    "joined_df = joined_df[joined_df.age.notnull()]\n",
+    "joined_df = joined_df[joined_df.age=='20s']\n",
+    "print(joined_df.type.value_counts())\n",
+    "\n",
+    "many_people_place = ['hospital','public_transportation', 'airport', 'church', 'university','school','park']\n",
+    "len(many_people_place)\n",
+    "\n",
+    "def ismany(x):\n",
+    "    if x in many_people_place:\n",
+    "        res = True\n",
+    "    else : \n",
+    "        res = False\n",
+    "    return res\n",
+    "\n",
+    "joined_df['is_many'] = joined_df['type'].apply(lambda x: ismany(x))\n",
+    "joined_df = joined_df[['patient_id', 'type', 'is_many']]\n",
+    "joined_df.is_many.value_counts()"
    ]
   }
  ],
